<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#324472"

    tools:context="com.gustavo.appclima.MainActivity">


    <TextView
        android:id="@+id/txtClima"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="147dp"
        android:text="@string/num_temperatura"
        android:textSize="72sp"
        android:textColor="@color/color_grados"
        />

    <TextView
        android:id="@+id/tvPais"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtClima"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="41dp"
        android:text="@string/text_ciudad"
        android:textSize="32sp"
        android:textColor="@color/color_ciudad"
        />

    <TextView
        android:id="@+id/tvTiempo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvPais"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="38dp"
        android:text="@string/text_temperatura"
        android:textSize="24sp"
        android:textColor="@color/color_clima"/>

</RelativeLayout>
